--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "nodemon": "^3.1.7",
     "redis": "^4.7.0",
     "sequelize": "^6.37.5",
+    "stripe": "^17.5.0",
     "winston": "^3.17.0"
   }
 }
